Improved project with new error handling, validation, and production config

--- a/config.env
+++ b/config.env
@@ -1,4 +1,6 @@
+DATABASE=mongodb+srv://barkat:<PASSWORD>@cluster1.xmvrd7j.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PASSWORD=12345bar
 PORT=3000
-NODE_ENV=development 
-DATABASE_PASSWORD=secret123
-API_KEY=abcdef123456
+NODE_ENV=production
+
+
