--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "learning node ,experess,mongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-    
+    "start": "nodemon server.js",
+    "start:prod": "set NODE_ENV=production && node server.js",
+
+    "dev": "nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Barkat",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.0.1",
     "express": "^4.21.2",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.13.23",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
+    "ndb": "^1.1.5",
     "nodemon": "^3.1.10"
   }
 }
