--- a/config.env
+++ b/config.env
@@ -1,6 +1,13 @@
 DATABASE=mongodb+srv://barkat:<PASSWORD>@cluster1.xmvrd7j.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=12345bar
 PORT=3000
-NODE_ENV=production
+NODE_ENV=development
+JWT_SECRET=barkat-is-a-lazy-guy-that-only-talk
 
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
+EMAIL_USERNAME=9ca0c651603e09
+EMAIL_PASSWORD=7b109b6917193a
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
