--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "set NODE_ENV=production && node server.js",
-
     "dev": "nodemon server.js",
     "debug": "ndb server.js"
   },
   "author": "Barkat",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.0.1",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.23",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.5",
     "slugify": "^1.6.6",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "ndb": "^1.1.5",
