--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "nodemon server.js",
     "start:prod": "set NODE_ENV=production && node server.js",
     "dev": "nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Barkat",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.0.1",
@@ -31,6 +34,7 @@
   },
   "devDependencies": {
     "ndb": "^1.1.5",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "parcel-bundler": "^1.12.5"
   }
 }
