to save the untracked changes

--- a/config.env
+++ b/config.env
@@ -11,3 +11,4 @@ EMAIL_USERNAME=9ca0c651603e09
 EMAIL_PASSWORD=7b109b6917193a
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
+EMAIL_FROM=hello@jonas.io
